--- a/config/configure.example
+++ b/config/configure.example
@@ -1,5 +1,47 @@
 #!/bin/sh
 
 ./configure \
+--prefix=/etc/AikoR-Nginx \
 --sbin-path=/usr/sbin/nginx \
---conf-path=/etc/nginx/nginx.conf \
+--pid-path=/etc/AikoR-Nginx/logs/nginx.pid \
+--lock-path=/etc/AikoR-Nginx/logs/nginx.lock \
+--conf-path=/etc/AikoR-Nginx/config/nginx.conf \
+--modules-path=/etc/AikoR-Nginx/logs/modules \
+--error-log-path=/etc/AikoR-Nginx/logs/error.log \
+--http-log-path=/etc/AikoR-Nginx/logs/access.log \
+--user=nginx \
+--group=nginx \
+--with-pcre=../pcre-8.44 \
+--with-pcre-jit \
+--with-zlib=../zlib-1.2.11 \
+--with-openssl=../openssl-1.1.1g \
+--with-http_ssl_module \
+--with-http_v2_module \
+--with-threads \
+--with-file-aio \
+--with-http_degradation_module \
+--with-http_auth_request_module \
+--with-http_geoip_module \
+--with-http_realip_module \
+--with-http_secure_link_module \
+--with-cpp_test_module \
+--with-debug \
+--with-google_perftools_module \
+--with-mail \
+--with-mail_ssl_module \
+--with-http_mp4_module \
+--with-http_flv_module \
+--with-stream \
+--with-stream_ssl_module \
+--with-stream_ssl_preread_module \
+--with-http_dav_module \
+--with-http_image_filter_module \
+--with-http_gunzip_module \
+--with-http_gzip_static_module \
+--with-http_addition_module \
+--with-http_random_index_module \
+--with-http_slice_module \
+--with-http_sub_module \
+--with-http_xslt_module \
+--with-select_module \
+--with-poll_module 
