--- a/config/configure.example
+++ b/config/configure.example
@@ -1,3 +1,17 @@
 #!/bin/sh
 
-./configure --prefix=/var/www/html --sbin-path=/usr/sbin/nginx --conf-path=/etc/AikoR-Nginx/conf/nginx.conf --http-log-path=/etc/AikoR-Nginx/logs/access.log --error-log-path=/etc/AikoR-Nginx/logs/error.log --with-pcre  --lock-path=/etc/AikoR-Nginx/logs/nginx.lock --pid-path=/etc/AikoR-Nginx/logs/nginx.pid --with-http_ssl_module --with-http_image_filter_module=dynamic --modules-path=/etc/AikoR-Nginx/modules --with-http_v2_module --with-stream=dynamic --with-http_addition_module --with-http_mp4_module
+./configure \
+--sbin-path=/usr/sbin/nginx \
+--conf-path=/etc/nginx/nginx.conf \
+--pid-path=/var/run/nginx.pid \
+--lock-path=/var/run/nginx.lock \
+--error-log-path=/var/log/nginx/error.log \
+--http-log-path=/var/log/nginx/access.log \
+--with-http_ssl_module \
+--with-http_stub_status_module \
+--with-http_realip_module \
+--with-http_addition_module \
+--with-http_sub_module \
+--with-http_dav_module \
+--with-http_flv_module \
+--with-http_mp4_module \
