--- a/config/configure.example
+++ b/config/configure.example
@@ -2,31 +2,33 @@
 
 ./configure \
 --sbin-path=/usr/sbin/nginx \
---pid-path=/etc/AikoR-Nginx/logs/nginx.pid \
---lock-path=/etc/AikoR-Nginx/logs/nginx.lock \
---conf-path=/etc/AikoR-Nginx/config/nginx.conf \
---modules-path=/etc/AikoR-Nginx/logs/modules \
---error-log-path=/etc/AikoR-Nginx/logs/error.log \
---http-log-path=/etc/AikoR-Nginx/logs/access.log \
---user=nginx \
---group=nginx \
---with-pcre=../pcre-8.44 \
---with-pcre-jit \
---with-zlib=../zlib-1.2.11 \
---with-openssl=../openssl-1.1.1g \
+--conf-path=/etc/nginx/nginx.conf \
+--pid-path=/var/run/nginx.pid \
+--lock-path=/var/run/nginx.lock \
+--error-log-path=/var/log/nginx/error.log \
+--http-log-path=/var/log/nginx/access.log \
 --with-http_ssl_module \
---with-http_v2_module \
---with-threads \
---with-file-aio \
---with-cpp_test_module \
---with-debug \
---with-google_perftools_module \
+--with-http_stub_status_module \
+--with-http_realip_module \
+--with-http_addition_module \
+--with-http_sub_module \
+--with-http_dav_module \
+--with-http_flv_module \
+--with-http_mp4_module \
+--with-http_gunzip_module \
+--with-http_gzip_static_module \
+--with-http_random_index_module \
+--with-http_secure_link_module \
+--with-http_degradation_module \
+--with-http_stub_status_module \
+--with-http_perl_module \
 --with-mail \
 --with-mail_ssl_module \
---with-http_mp4_module \
---with-http_flv_module \
---with-stream \
---with-stream_ssl_module \
---with-stream_ssl_preread_module \
---with-select_module \
---with-poll_module \
+--with-file-aio \
+--with-ipv6 \
+--with-sha1=/usr/include/openssl \
+--with-md5=/usr/include/openssl \
+--with-http_spdy_module \
+--with-pcre \
+--with-pcre-jit \
+--with-debug
