--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,8 +1,8 @@
-project_name: nginx-build
+project_name: AikoR-Nginx
 env:
   - GO111MODULE=on
 builds:
-  - binary: nginx-build
+  - binary: AikoR-Nginx
     ldflags:
       - -s -w
       - -X main.NginxBuildVersion={{.Version}}
