--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,4 +21,4 @@ jobs:
     - name: Run
       run: |
         make
-        ./nginx-build -c ./config/configure.example -m ./config/modules.json.example -d work -clear -zlib -openssl
+        ./aikor-nginx -c ./config/configure.example -m ./config/modules.json.example -d work -clear -zlib -openssl
